# Rust-Fingerprint-Library

./: .gitignore  Cargo.toml  README.md
bridge/: Cargo.toml  cl_args.rsp  sgwsqlib.def  sgwsqlib_stub.c
bridge/src/: ffi.rs  main.rs
bridge/tests/: ipc.rs
docs/superpowers/plans/: 2026-06-11-cross-platform-secugen.md
docs/superpowers/specs/: 2026-06-11-cross-platform-secugen-design.md
examples/: basic.ts  quick_test.ts  wbf_quick.ts  wbf_test.ts
protocol/: Cargo.toml
protocol/src/: lib.rs
sdk/: Cargo.toml  index.d.ts  index.js  package-lock.json  package.json
sdk/src/: lib.rs  update_check.rs
sdk/src/fp_core/: errors.rs  traits.rs  types.rs
sdk/src/vendors/: mod.rs
sdk/src/vendors/neurotec/: mod.rs
sdk/src/vendors/secugen/: bridge.rs  constants.rs  error_map.rs  ffi_types.rs  library_path.rs  mod.rs  native.rs
sdk/src/vendors/template/: mod.rs
sdk/src/vendors/wbf/: mod.rs
updater/: Cargo.toml
updater/examples/: keygen.rs  sign_release.rs  verify_self_test.rs
updater/src/: apply.rs  assets.rs  github.rs  lib.rs  main.rs  version.rs
