[package]
name = "secugen-bridge"
version.workspace = true
edition = "2021"
description = "32-bit bridge process that loads SecuGen sgfplib.dll and communicates via JSON stdin/stdout"

[[bin]]
name = "secugen-bridge"
path = "src/main.rs"

[dependencies]
fingerprint-protocol = { path = "../protocol" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"
zeroize = "1"
