[package]
name = "fingerprint-sdk"
version.workspace = true
edition = "2021"
description = "Vendor-agnostic fingerprint scanner SDK for Node.js via napi-rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
fingerprint-protocol = { path = "../protocol" }
napi = { version = "2", features = ["async"] }
napi-derive = "2"
tokio = { version = "1", features = ["rt-multi-thread"] }
thiserror = "1"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.12", features = ["rustls-tls", "json"], default-features = false }
semver = "1"
zeroize = "1"

[build-dependencies]
napi-build = "2"

[target.'cfg(not(windows))'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
