[package]
name = "fingerprint-updater"
version.workspace = true
edition = "2021"
description = "Self-updater for fingerprint-sdk, downloads updates from GitHub Releases"

[[bin]]
name = "fingerprint-updater"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.12", features = ["rustls-tls", "stream", "json"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
semver = { version = "1", features = ["serde"] }
sha2 = "0.10"
zip = "2"
clap = { version = "4", features = ["derive"] }
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-util"] }
thiserror = "1"
futures-util = "0.3"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Storage_FileSystem"] }
