[package]
name = "fingerprint-updater"
version.workspace = true
edition = "2021"
description = "Self-updater for fingerprint-sdk, downloads updates from GitHub Releases"

[[bin]]
name = "fingerprint-updater"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.12", features = ["rustls-tls", "stream", "json"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
semver = { version = "1", features = ["serde"] }
sha2 = "0.10"
zip = "2"
clap = { version = "4", features = ["derive"] }
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-util"] }
thiserror = "1"
futures-util = "0.3"
ed25519-dalek = { version = "2", default-features = false }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Storage_FileSystem"] }

[dev-dependencies]
# Default features (incl. SigningKey + Signer) for generating test signatures
# and producing fresh keypairs via the `keygen` example.
ed25519-dalek = "2"
getrandom = "0.2"
# In-memory key hygiene for the signing examples.
zeroize = "1"
